<resources>
    <string name="app_name">Sparl</string>
    <string name="sparl">Sparl</string>
    <string name="welcome_back">Welcome</string>
    <string name="read_it_together">Find Doctors Now</string>
    <string name="skip">Skip</string>
    <string name="login">Login</string>
    <string name="google">Google</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign up</string>
    <string name="forget_password">Forget Password?</string>
    <string name="sparl_team">SPARL Team,</string>
    <string name="hello">Hello</string>
    <string name="search">Search hospitals here.....</string>
    <string name="goals">Goals</string>
    <string name="disease_predictor">Disease Predictor</string>
    <string name="insurance">Insurance</string>
    <string name="predictor">Predictor</string>
    <string name="hospitals">Hospitals</string>
    <string name="clinics">Clinics</string>
    <string name="click_here">Click here!</string>
    <string name="disease_pred_def">Machine Learning based disease predictor that helps you to predict your disease and risk level on the basis of your symptoms</string>
    <string name="home">Home</string>
    <string name="favourite">Favourite</string>
    <string name="account">Account</string>
    <string name="settings">Settings</string>
    <string name="trending">TRENDING</string>

    <string name="job_success">Job Success</string>

    <string name="ui_ux_designer">UI/UX Designer</string>

    <string name="my_desc">Doing at the sweet spot between aesthetics and elegance to give life to your brand.My opinion belong to nobody but myself.</string>

    <string name="about_me">About Me</string>

    <string name="contact">Contact</string>

    <string name="skills">Skills</string>

    <string name="ratings">Star Ratings</string>

    <string name="samplereview">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec pretium bibendum sapien, ut euismod massa. Duis convallis sem sed turpis elementum auctor.</string>

    <string name="feeling_tired_msg">FEELING TIRED?\nFIND A HOSPITAL.</string>

    <string name="zip_code_img_desc">Button on click show zip code in dialog message</string>
    <string name="fax_number_img_desc">Button on click show fax number in dialog message</string>
    <string name="website_img_desc">Button on click open hospital website in browser</string>
    <string name="call_button_desc">Button on click call the doctor</string>
    <string name="no_connection_ic_desc">No wifi connection icon showed if there is no internet connection</string>
    <string name="profile_img">Doctor Profile image</string>

    <string name="bio_label">Bio : </string>
    <string name="call">call</string>

    <string name="search_query_hint">Type name,condition,…etc</string>
    <string name="search_area">Select search area</string>
    <string name="search_specialty">Select doctor specialty</string>
    <string name="select_gender">Select Gender:</string>
    <string name="no_preference">No preference</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="start_search">Find Now</string>
    <string name="no_connection">No network connection!</string>

    <string name="mile">Miles</string>

    <string name="add_doctor_message">Add new doctor</string>
    <string name="my_doctors">My Hospitals</string>
    <string name="miles">Miles</string>
    <string name="no_location_message">No Location Provided!</string>
    <string name="doctor_location_title">Doctor\'s Location</string>
    <string name="no_results">No results!</string>
    <string name="connection_failed">Connection Failed</string>
    <string name="no_zip_code">Sorry.I have not zip code!</string>
    <string name="no_fax_number">Sorry.I have not fax number!</string>
    <string name="no_website">Sorry, I have not website</string>
    <string name="no_phone_number">Sorry. I have not phone number!</string>
    <string name="select_location">please select a location</string>
    <string name="select_location_or_name_msg">At least select name or location</string>
    <string name="homepage">Homepage</string>
    <string name="already_a_member_login">Already a member? Login</string>
    <string name="skip1"><![CDATA[Skip>>]]></string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>
