<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="22dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="30dp"
            android:fontFamily="sans-serif-smallcaps"
            android:gravity="center"
            android:text="FEELING TIRED?\nFIND A CLINIC."
            android:textColor="@android:color/black"
            android:textSize="45sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/white_rect_bg"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/imageMenu">

            <EditText
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:background="@null"
                android:hint="@string/search"
                android:imeOptions="actionSearch"
                android:inputType="text"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                android:textColor="@color/colorAccent"
                android:textSize="16sp"
                android:importantForAutofill="no" />

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:background="@drawable/search_icon_bg"
                android:contentDescription="@string/app_name"
                android:padding="6dp"
                android:src="@drawable/ic_search"
                app:tint="@color/colorPrimary"/>

        </LinearLayout>

        <Button
            android:id="@+id/bu_search_location"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/rounded_button_selector"
            android:drawableEnd="@drawable/ic_keyboard_arrow_right_black_24dp"
            android:drawableLeft="@drawable/ic_my_location_black_24dp"
            android:drawableRight="@drawable/ic_keyboard_arrow_right_black_24dp"
            android:drawableStart="@drawable/ic_my_location_black_24dp"
            android:gravity="center"
            android:onClick="pickALocation"
            android:text="Find Nearby" />


        <Button
            android:id="@+id/bu_specialty"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/rounded_button_selector"
            android:drawableEnd="@drawable/ic_keyboard_arrow_right_black_24dp"
            android:drawableLeft="@drawable/doctor_icon"
            android:drawableRight="@drawable/ic_keyboard_arrow_right_black_24dp"
            android:drawableStart="@drawable/doctor_icon"
            android:onClick="selectSpecialty"
            android:text="Find by category" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/select_gender" />

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="40dp"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/rb_no_pref"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/no_preference" />

            <RadioButton
                android:id="@+id/rb_male"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/male" />

            <RadioButton
                android:id="@+id/rb_female"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/female" />

        </RadioGroup>

        <Button
            android:id="@+id/bu_start_search"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_gravity="bottom"
            android:layout_marginBottom="16dp"
            android:background="@drawable/rounded_button_selector_blue"
            android:onClick="search"
            android:text="@string/start_search"
            android:textColor="@android:color/white" />

    </LinearLayout>

</ScrollView>
