<?xml version="1.0" encoding="utf-8"?>
    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/bg"
        tools:context=".homepage">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layoutHeader"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:background="@drawable/header_background"
            android:padding="10dp"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/textHello"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="15dp"
                android:text="@string/hello"
                android:textColor="@color/colorWhite"
                android:textSize="25sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>
            <TextView
                android:id="@+id/textUsername"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginTop="15dp"
                android:text="@string/sparl"
                android:textColor="@color/colorWhite"
                android:textSize="25sp"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@+id/textHello"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginLeft="4dp" />

            <ImageView
                android:id="@+id/imageMenu"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:contentDescription="@string/app_name"
                android:src="@drawable/ic_menu"
                app:tint="@color/colorWhite"
                app:layout_constraintBottom_toBottomOf="@+id/textHello"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/textHello"
                tools:ignore="MissingConstraints" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="15dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/white_rect_bg"
                android:orientation="horizontal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@id/imageMenu">

                <EditText
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_weight="1"
                    android:background="@null"
                    android:hint="@string/search"
                    android:imeOptions="actionSearch"
                    android:inputType="text"
                    android:paddingStart="15dp"
                    android:paddingEnd="15dp"
                    android:textColor="@color/colorAccent"
                    android:textSize="16sp"
                    android:importantForAutofill="no" />

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:background="@drawable/search_icon_bg"
                    android:contentDescription="@string/app_name"
                    android:padding="6dp"
                    android:src="@drawable/ic_search"
                    app:tint="@color/colorPrimary"/>

            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <ScrollView
            android:id="@+id/scrollView2"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:overScrollMode="never"
            android:scrollbars="none"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/layoutHeader">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:id="@+id/layouthospital"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="22dp"
                    android:background="@drawable/white_rect_bg"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="10dp"
                    app:layout_constraintDimensionRatio="H,1:1"
                    app:layout_constraintEnd_toStartOf="@id/layoutclinic"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <ImageButton
                        android:id="@+id/HospitalButton1"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:layout_margin="8dp"
                        android:background="@color/colorWhite"
                        android:contentDescription="@string/app_name"
                        android:padding="8dp"
                        android:src="@drawable/hospital" />

                    <Button
                        android:id="@+id/HospitalButton2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:background="@color/colorWhite"
                        android:clickable="true"
                        android:text="@string/hospitals"
                        android:textColor="@color/colorAccent"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/layoutclinic"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="22dp"
                    android:background="@drawable/white_rect_bg"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="10dp"
                    app:layout_constraintDimensionRatio="H,1:1"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/layoutpredictor"
                    app:layout_constraintTop_toTopOf="parent">


                    <ImageButton
                        android:id="@+id/ClinicButton1"
                        android:layout_width="99dp"
                        android:layout_height="100dp"
                        android:layout_margin="8dp"
                        android:background="@color/colorWhite"
                        android:contentDescription="@string/app_name"
                        android:padding="8dp"
                        android:src="@drawable/clinic" />

                    <Button
                        android:id="@+id/ClinicButton2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/colorWhite"
                        android:clickable="true"
                        android:gravity="center"
                        android:text="@string/clinics"
                        android:textColor="@color/colorAccent"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/layoutpredictor"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="22dp"
                    android:background="@drawable/white_rect_bg"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="15dp"
                    app:layout_constraintDimensionRatio="H,1:1"
                    app:layout_constraintEnd_toStartOf="@id/layoutclinic"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/layouthospital">

                    <ImageView
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:layout_margin="8dp"
                        android:contentDescription="@string/app_name"
                        android:padding="8dp"
                        android:src="@drawable/first" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/predictor"
                        android:textColor="@color/colorAccent"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/layoutInsurance"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="22dp"
                    android:background="@drawable/white_rect_bg"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="15dp"
                    app:layout_constraintDimensionRatio="H,1:1"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/layoutpredictor"
                    app:layout_constraintTop_toBottomOf="@id/layoutclinic"
                    tools:ignore="MissingConstraints">

                    <ImageView
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:layout_margin="8dp"
                        android:contentDescription="@string/app_name"
                        android:padding="8dp"
                        android:src="@drawable/insurance" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/insurance"
                        android:textColor="@color/colorAccent"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                </LinearLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:background="@drawable/trending_bg"
                    android:padding="20dp"
                    app:layout_constraintEnd_toEndOf="@id/layoutInsurance"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="@id/layouthospital"
                    app:layout_constraintTop_toBottomOf="@id/layoutpredictor"
                    tools:ignore="MissingConstraints">

                    <TextView
                        android:id="@+id/textTrending"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/white_rect_bg"
                        android:paddingStart="8dp"
                        android:paddingTop="2dp"
                        android:paddingEnd="8dp"
                        android:paddingBottom="2dp"
                        android:text="@string/trending"
                        android:textColor="@color/colorAccent"
                        android:textSize="16sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:contentDescription="@string/app_name"
                        android:src="@drawable/ic_favorite"
                        app:layout_constraintBottom_toBottomOf="@id/textTrending"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="@id/textTrending"
                        app:tint="@color/colorWhite" />

                    <TextView
                        android:id="@+id/textView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:ellipsize="end"
                        android:maxLines="3"
                        android:text="@string/disease_pred_def"
                        android:textColor="@color/colorWhite"
                        android:textSize="15sp"
                        app:layout_constraintTop_toBottomOf="@+id/textTrending"
                        tools:layout_editor_absoluteX="25dp" />


                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </ScrollView>

        <com.google.android.material.bottomnavigation.BottomNavigationView
            android:id="@+id/bottomNavigationView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:backgroundTint="@color/colorWhite"
            app:itemIconSize="30dp"
            app:labelVisibilityMode="unlabeled"
            app:layout_constraintBottom_toBottomOf="parent"
            app:menu="@menu/navigation_menu"
            tools:ignore="UnusedAttribute" />

        <ImageButton
            android:id="@+id/viewDivider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorDivide"
            android:src="@drawable/ic_account"
            android:clickable="true"
            app:layout_constraintBottom_toTopOf="@+id/bottomNavigationView"
            tools:ignore="MissingConstraints" />



    </androidx.constraintlayout.widget.ConstraintLayout>

